fixed collapsed on IOS

--- a/css/style.less
+++ b/css/style.less
@@ -1563,8 +1563,12 @@ body, html {
                     color: #fff;
 
                     .open_row {
-                        
+
                     }
+                }
+
+                h3 {
+                    cursor: pointer;
                 }
 
                 a {
